@@ -8,6 +8,9 @@
     "factorio_version": "1.1",
     "dependencies": [
         "? base >= 1.1.61",
+        "automatic-station-painter >= 1.0.5",
+        "Automatic_Train_Painter >= 1.1.4",
+        "FluidWagonColorMask >= 1.1.0",
         "Gun_Turret_Alerts >= 1.1.9"
     ]
 }
